fix:layout of form on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,5 +199,5 @@ nav li {
 
 a:hover {
     color: black;
-    background-color: #fafafa;
+    background-color: rgba(0, 102, 111, 0.5);
 }
